--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
-<link href="/favicon.png" rel="icon">
+<link href="/favicon.png" type="image/png" rel="icon">
 <!-- end custom head snippets -->
