--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -30,6 +30,9 @@
         <a href="{{ post.url | absolute_url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
+    {% if post.date %}
+      <p class="page__meta"><i aria-hidden="true"></i> {{ post.date | date: "%B %d, %Y" }}</p>
+    {% endif %}
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
